@startuml

title __MODULERUN's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace modulerun {
        class ch.bfh.ti.academia.modulerun.Modulerun {
            - description : String
            - enrolled : String
            - enrollments : List<Enrollment>
            - grade : String
            - mid : String
            - mrid : int
            - name : String
            - semester : String
            - teachers : List<PersonDTO>
            - year : int
            + Modulerun()
            + Modulerun()
            + getCoordinator()
            + getDescription()
            + getEnrolled()
            + getEnrollments()
            + getGrade()
            + getMid()
            + getMrid()
            + getName()
            + getSemester()
            + getTeachers()
            + getYear()
            + setCoordinator()
            + setDescription()
            + setEnrolled()
            + setEnrollments()
            + setGrade()
            + setMid()
            + setMrid()
            + setName()
            + setSemester()
            + setTeachers()
            + setYear()
        }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace modulerun {
        class ch.bfh.ti.academia.modulerun.ModulerunController {
            {static} - CONTENT_TYPE_HEADER : String
            {static} - JSON_MEDIA_TYPE : String
            {static} - logger : Logger
            - objectMapper : ObjectMapper
            + doGet()
        }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace modulerun {
        class ch.bfh.ti.academia.modulerun.ModulerunRepository {
            {static} - FIND_COORDINATOR : String
            {static} - FIND_ENROLLMENTS : String
            {static} - FIND_MODULERUN_QUERY : String
            {static} - FIND_QUERY : String
            {static} - FIND_QUERY_TEACHER : String
            {static} - FIND_QUERY_TEACHER_WITH_MRID : String
            {static} - FIND_QUERY_WITH_MRID : String
            {static} - FIND_TEACHERS : String
            - connection : Connection
            {static} - logger : Logger
            + ModulerunRepository()
            + checkModulerun()
            + findAllForStudents()
            + findAllForTeacher()
            + findCoordinator()
            + findForStudent()
            + findForTeacher()
            - getEnrollments()
            - getModulerunStudent()
            - getModulerunTeacher()
            - getTeachers()
        }
    }
  }
  

  ch.bfh.ti.academia.modulerun.Modulerun o-- ch.bfh.ti.academia.person.PersonDTO : coordinator
  ch.bfh.ti.academia.modulerun.ModulerunController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.modulerun.ModulerunController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
